cmake_minimum_required(VERSION 3.1)

project(nbind)

ADD_LIBRARY(nbind SHARED)

TARGET_SOURCES(nbind PRIVATE src/common.cc src/reflect.cc ${CMAKE_JS_SRC})
TARGET_INCLUDE_DIRECTORIES(nbind PUBLIC include ${CMAKE_JS_INC})
TARGET_LINK_LIBRARIES(nbind PUBLIC ${CMAKE_JS_LIB})
TARGET_COMPILE_DEFINITIONS(nbind PUBLIC BUILDING_NODE_EXTENSION)
SET_TARGET_PROPERTIES(nbind PROPERTIES
        CXX_STANDARD 11
        POSITION_INDEPENDENT_CODE ON)

IF(EMSCRIPTEN)
    SET_TARGET_PROPERTIES(nbind PROPERTIES PREFIX "" SUFFIX ".js")
    TARGET_SOURCES(nbind PRIVATE src/em/Binding.cc)
ELSE()
    SET_TARGET_PROPERTIES(nbind PROPERTIES PREFIX "" SUFFIX ".node")
    TARGET_SOURCES(nbind PRIVATE src/v8/Binding.cc src/v8/Buffer.cc)
ENDIF()
